# bpp_labs

./: .gitignore  README.md  backup.c  collect_data.py  first.c  fuck.c  main.c  newRing.c  v0.c  v1.c  v2.c
Jacobi (lab 4)/: .env  CMakeLists.txt  README.md
Jacobi (lab 4)/src/: main.cpp
Jacobi (lab 4)/src/Algo/: Algo.cpp  Algo.h  Vector3.cpp  Vector3.h
Jacobi (lab 4)/src/Conf/: ConfReader.cpp  ConfReader.h
Jacobi (lab 4)/src/Util/: util.cpp  util.h
Jacobi (lab 4)/test/: run.py
Jacobi (lab 4)/test/ClusterTesting/: ClusterTesting.py  __init__.py
Jacobi (lab 4)/test/config/: count_process.json
OpenMP_Lab/: README.md  result.xlsx  run.py
OpenMP_Lab (lab 2)/exe/: v1.cstatic1.c  v1.cstatic2.c
OpenMP_Lab (lab 2)/res/: data(static1).csv  data(static2).csv  static1_1.txt  static2_4.txt  static4_1.txt  static4_4.txt  static4_8.txt
OpenMP_Lab/src/: v0_reduction.c  v0_sVector.c  v1.c
SimpleIterationsMethod/: CMakeLists.txt  README.md  generate_test_data.py
SimpleIterationsMethod/src/: main.c
SimpleIterationsMethod/src/CtxData/: CtxData.c  CtxData.h
SimpleIterationsMethod/src/calculation/: calculation.c  calculation.h
SimpleIterationsMethod/src/parser/: parser.c  parser.h
SimpleIterationsMethod/src/solve/: solve.c  solve.h
lab1_linear_algebra/run/: run_sbatch.sh
lab1_linear_algrbra/: README.md
lab1_linear_algrbra/res/: result.xlsx
lab1_linear_algrbra/run/: collect_data.py  gen_sbatch.sh
lab1_linear_algrbra/src/: v0.c
lab1_linear_algrebra/: README.md
lab1_linear_algrebra/run/: build.sh  main.sh
lab1_linear_algrebra/src/: v2.c
lab2_openmp/: .clang-format  README.md
lab2_openmp/exe/: v1.cstatic4.c
lab2_openmp/res/: data(static4).csv  static1_2.txt  static1_4.txt  static1_8.txt  static2_1.txt  static2_8.txt
lab2_openmp/src/: v0_reduction.c  v1.c
lab3_matmult/: README.md  input.mat
lab3_matmult/res/: result.xlsx
lab3_matmult/src/: main.cpp
lab3_matmult/test/: main.py
lab4_jacobi/: .env  CMakeLists.txt
lab4_jacobi/res/: .~lock.lab4_result.xlsx#  lab4_result.xlsx
lab4_jacobi/res/new/: jacobi4
lab4_jacobi/res/new/err/: 2.err
lab4_jacobi/res/new/prof/: jacobi1.prot  jacobi1.stf  jacobi1.stf.cop  jacobi1.stf.dcl  jacobi1.stf.f.0  jacobi1.stf.sts  jacobi2.prot  jacobi2.stf  jacobi2.stf.cop  jacobi2.stf.dcl  jacobi2.stf.f.0  jacobi2.stf.f.1  jacobi2.stf.msg  jacobi2.stf.sts  jacobi4.prot  jacobi4.stf  jacobi4.stf.cache  jacobi4.stf.cop  jacobi4.stf.dcl  jacobi4.stf.f.0  jacobi4.stf.f.1  jacobi4.stf.f.2  jacobi4.stf.f.3  jacobi4.stf.msg  jacobi4.stf.sts
lab4_jacobi/res/old/err/: 1.err  16.err  4.err  8.err
lab4_jacobi/res/old/prof/: jacobi1.prot  jacobi1.stf  jacobi1.stf.cop  jacobi1.stf.dcl  jacobi1.stf.f.0  jacobi1.stf.sts  jacobi16.prot  jacobi16.stf  jacobi16.stf.cop  jacobi16.stf.dcl  jacobi16.stf.f.0  jacobi16.stf.f.1  jacobi16.stf.f.10  jacobi16.stf.f.11  jacobi16.stf.f.12  jacobi16.stf.f.13  jacobi16.stf.f.14  jacobi16.stf.f.15  jacobi16.stf.f.2  jacobi16.stf.f.3  jacobi16.stf.f.4  jacobi16.stf.f.5  jacobi16.stf.f.6  jacobi16.stf.f.7  jacobi16.stf.f.8  jacobi16.stf.f.9  jacobi16.stf.msg  jacobi16.stf.sts  jacobi2.prot  jacobi2.stf  jacobi2.stf.cop  jacobi2.stf.dcl  jacobi2.stf.f.0  jacobi2.stf.f.1  jacobi2.stf.msg  jacobi2.stf.sts  jacobi4.prot  jacobi4.stf  jacobi4.stf.cop  jacobi4.stf.dcl  (+21 more)
lab4_jacobi/src/: main.cpp
lab4_jacobi/src/Algo/: Algo.cpp  Algo.h  Vector3.cpp
lab4_jacobi/src/Conf/: ConfReader.cpp  ConfReader.h
lab4_jacobi/src/Util/: util.cpp
lab4_jacobi/test/: run.py
lab4_jacobi/test/ClusterTesting/: ClusterTesting.py  TestSetup.py  config_reader.py
lab4_jacobi/test/config/: count_process.json
lab5/: .env  CMakeLists.txt  README.md
lab5/res/: .~lock.results.xlsx#  results.xlsx
lab5/res/prof/: cluster.prot  cluster.stf  cluster.stf.cache  cluster.stf.cop  cluster.stf.dcl  cluster.stf.f.0  cluster.stf.f.1  cluster.stf.f.131072  cluster.stf.f.131073  cluster.stf.f.131074  cluster.stf.f.131075  cluster.stf.f.196608  cluster.stf.f.196609  cluster.stf.f.196610  cluster.stf.f.196611  cluster.stf.f.2  cluster.stf.f.3  cluster.stf.f.65536  cluster.stf.f.65537  cluster.stf.f.65538  cluster.stf.f.65539  cluster.stf.msg  cluster.stf.sts
lab5/src/: main.cpp
lab5/src/Config/: CMakeLists.txt  Config.cpp  Config.h
lab5/src/Core/: CMakeLists.txt  Core.cpp  Core.h
lab5/src/Core/Storage/: Storage.cpp  Storage.h
lab5/src/Core/Task/: CMakeLists.txt  Task.cpp  Task.h
lab5/src/Core/TaskList/: CMakeLists.txt  TaskList.cpp  TaskList.h
lab5/src/Core/pi/: CMakeLists.txt  pi.cpp  pi.h
lab5/src/LoadBalancer/: LoadBalancer.cpp  LoadBalancer.h  RankData.cpp  RankData.h
lab5/src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
lab5/src/Storage/: CMakeLists.txt  Storage.cpp  Storage.h
lab5/src/TaskList/: TaskList.cpp  TaskList.h
lab5/src/Worker/: EStatus.h  MutualMem.h  Profiler.cpp  Profiler.h  Worker.cpp  Worker.h
lab5/test/: clean.sh  re_make.sh  run.py  run_all.sh
lab5/test/ClusterTesting/: TestSetup.py
lab5/test/config/: count_nodes.json  count_nodes_balanced.json  count_process.json  count_process_balanced.json  nodes.json  profile.json  rerun.json  size_process.json
matmult/: CMakeLists.txt
matmult (lab 3)/: CMakeLists.txt  in.mat
matmult (lab 3)/src/FileWorker/: FileWorker.cpp
matmult (lab 3)/src/MatrixModel/: MatrixModel.cpp  MatrixModel.h
matmult (lab 3)/src/runner/: setup.cpp  setup.h
matmult (lab 3)/test/: effectiveness_test.json  input_generator.py
matmult (lab 3)/testdata/: res1.matrix
matmult/src/: main.cpp
matmult/src/CalculationController/: CalculationController.cpp  CalculationController.h
matmult/src/ConfigStruct/: TConfigStruct.cpp  TConfigStruct.h
matmult/src/FileWorker/: FileWorker.cpp  FileWorker.h
matmult/src/MatrixModel/: MatrixModel.cpp  MatrixModel.h
matmult/src/algo/: algo.cpp  algo.h
matmult/src/runner/: runner.cpp  runner.h  setup.cpp  setup.h
matmult/src/utils/: utils.cpp  utils.h
matmult/test/: TestSetup.py  effectiveness_test.json  grid_test.json  input_generator.py  main.py  setup.sh  size_test.json
matmult/testdata/: test1.matrix
(+3 files in other folders)
